<resources>
    <string name="app_name">Purchaser Reborn</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="add_user">Add User</string>
    <string name="seller">Seller</string>
    <string name="admin">admin</string>
    <string name="save">Save</string>
    <string name="user">User</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="admin123">admin123</string>
    <string name="image_of_product">Image of Product</string>
    <string name="products">Products</string>
    <string name="users">Users</string>
    <string name="edit_button">Edit Button</string>
    <string name="update">Update</string>
    <string name="buy">Buy</string>
    <string name="cart">Cart</string>
    <string name="check_out">Check Out</string>
    <string name="add">Add</string>
    <string name="register">Register</string>
    <string name="pay">Pay</string>
    <string name="enter_amount_to_be_paid">Enter Amount to be paid</string>
    <string name="enter_your_upi_id">Enter your UPI Id</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_payment_description">Enter Payment Description</string>
    <string name="make_payment">Make Payment</string>
</resources>