<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/product_constraint"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/product_list_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/product_list_image"
            app:layout_constraintStart_toEndOf="@id/product_list_image"
            app:layout_constraintTop_toTopOf="@+id/product_list_image" />

        <TextView
            android:id="@+id/product_list_price_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/product_list_name_text"
            app:layout_constraintEnd_toStartOf="@+id/cart_add_image_view"
            app:layout_constraintTop_toTopOf="@+id/product_list_name_text"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/product_list_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_of_product"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <ImageView
            android:id="@+id/cart_add_image_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/cart"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/product_list_price_text"
            app:layout_constraintEnd_toStartOf="@+id/product_list_edit"
            app:layout_constraintTop_toTopOf="@+id/product_list_image"
            app:srcCompat="@drawable/cart_add" />

        <ImageView
            android:id="@+id/product_list_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/edit_button"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/cart_add_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cart_add_image_view"
            app:srcCompat="@drawable/edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>